[gd_scene load_steps=2 format=3 uid="uid://cf23510q5u7mm"]

[ext_resource type="Script" uid="uid://ci2nq18sqyl6n" path="res://Scripts/upgrade_menu.gd" id="1_ltp0x"]

[node name="TelaUpgrade" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ltp0x")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.0
offset_top = -137.0
offset_right = 153.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -12.0
offset_right = 60.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Upgrade1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mais Dano"

[node name="Upgrade2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mais Vida"

[node name="Upgrade3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mais XP"

[node name="Label" type="Label" parent="."]
offset_left = 395.0
offset_top = 331.0
offset_right = 511.0
offset_bottom = 358.0
text = "Subiu de n√≠vel!"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Upgrade2" to="." method="_on_upgrade_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Upgrade3" to="." method="_on_upgrade_3_pressed"]
